added more to portfolio

--- a/index.html
+++ b/index.html
@@ -25,16 +25,15 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Sharlene Imperial</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>Software Engineer</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">My Projects</a></li>
-								<li><a href="#about">About Me</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#projects">My Projects</a></li>
+								<li><a href="https://www.linkedin.com/in/sharleneimperial/">LinkedIn</a></li>
+								<li><a href="mailto:sharlene_imperial@yahoo.com">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -46,22 +45,62 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-							</article>
+								<center><span class="image main"><img src="images/sharprofilepic.jpg" alt="" style="width: 25%; height: 25%"/></span></center>
+								<h3>Hello there, I'm Sharlene <span role="img" aria label='waving hand emoji'>👋</span></h3>
+								<p>I'm a Seattle-based Software Engineer focused on front-end/full stack web development. I recently graduated from General Assembly - Software Engineering Immersive Remote Course. I am eager to continue my growth and development in the Computer Science field.</p>
+								<ul class="icons" align="center">
+									<li><a href="https://www.linkedin.com/in/sharleneimperial/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://twitter.com/SharleneImper7" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/sharleneimperial" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								</ul>
+									</article>
 
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+						<!-- Projects -->
+							<article id="projects">
+								<h2 class="major">My Projects</h2>
+								<center><span class="image main"><img src="images/myprojectspic.jpg" alt="" style="width: 25%; height: 25%"/></span></center></span>
+								<p>Here are my recent works from when I attended General Assembly.</p>
+								<section id="projects" class="content-section">
+								<div class="container">
+								  <div class="mx-auto">
+									<h2>Projects</h2>
+									<div class="content-subsection">
+									  <h3 class="content-subsection-heading">Development</h3>
+									  <div class="portfolio-container">
+										<div class="portfolio-item">
+										  <a class="text-white" href="https://github.com/sharleneimperial/Tetris-Game-Project-1">
+											<div class="card-image card-image-contain" style="background-image: url(images/tetrisgif.gif)"></div>
+											<div class="project-inner">
+											  <h4>Sharlene's Game Of Tetris</h4>
+											  <p>The aim in Tetris is pretty simple; you bring down blocks from the top of the screen. You can move the blocks around, either left to right and/or you can rotate them. The blocks fall at a certain rate, but you can make them fall faster if you’re sure of your positioning(just keep pressing down on the Arrow Down key). Your objective is to get all the blocks to fill all the empty space in a line at the bottom of the screen; whenever you do this, you’ll find that the blocks vanish and you get awarded some points. For my version, this will be a never-ending game. So you can play until you drop! 😂</p>
+											</div>
+											<div class="project-info">
+											  <div class="project-text">
+												<h4>github</h4>
+											  </div>
+											</div>
+										  </a>
+										</div>
+										<div class="portfolio-item">
+										  <a class="text-white" href="https://github.com/sharleneimperial/movie-fans-app">
+											<div class="card-image card-image-contain" style="background-image: url(images/moviefansapp.png)"></div>
+											<div class="project-inner">
+											  <h4>Movie Fans App</h4>
+											  <p>A feature where you will be able to add your top favorite list of movies. To add a description about the movie, thoughts and your rating for the movie. You can also make changes/delete the movies that are no longer in your top favorite movie list and add your new top favorite movies.</p>
+											</div>
+											<div class="project-info">
+											  <div class="project-text">
+												<h4>github</h4>
+											  </div>
+											</div>
+										  </a>
+										</div>
 							</article>
 
 						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
+							<article id="linkedIn">
+								<h2 class="major">Linked In</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 							</article>
@@ -90,10 +129,10 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://twitter.com/SharleneImper7" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/sharleneimperial" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
@@ -155,10 +194,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://twitter.com/SharleneImperi3" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a href="https://github.com/sharleneimperial" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									</ul>
 
 									<h4>Actions</h4>
@@ -343,7 +382,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; 2021 Sharlene Imperial. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
