--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 							<div class="inner">
 								<h1>Sharlene Imperial</h1>
 								<p>Software Engineer</p>
+								<br/> <a id="cv-link" href="Sharlene-Imperial-Resume.pdf" target="_blank">CV</a>
 							</div>
 						</div>
 						<nav>
@@ -47,7 +48,8 @@
 								<h2 class="major">Intro</h2>
 								<center><span class="image main"><img src="images/sharprofilepic.jpg" alt="" style="width: 25%; height: 25%"/></span></center>
 								<h3>Hello there, I'm Sharlene <span role="img" aria label='waving hand emoji'>👋</span></h3>
-								<p>I'm a Seattle-based Software Engineer focused on front-end/full stack web development. I recently graduated from General Assembly - Software Engineering Immersive Remote Course. I am eager to continue my growth and development in the Computer Science field.</p>
+								<p>I'm a Seattle-based Software Engineer focused on front-end/full stack web development. I recently graduated from General Assembly - Software Engineering Immersive Remote Course. Fueled by my desire to meaningfully interact with people, I have a vast curiosity and appreciation for the challenge of designing software that can enrich peoples’ lives. With many years in the customer service industry, I understand human interaction. I am eager to join a software engineering team that will synthesize my capacity to work with others and my new toolkit in the above skills that will ultimately provide meaningful projects to support humanity.
+									<br/>Skills used: HTML, CSS, JavaScript, Python, Django, Postgres, SQL, NoSQL, Heroku, React, Postman, Bootstrap, JQuery, Node.js, and Express</p>
 								<ul class="icons" align="center">
 									<li><a href="https://www.linkedin.com/in/sharleneimperial/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://twitter.com/SharleneImper7" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -96,6 +98,34 @@
 											</div>
 										  </a>
 										</div>
+										<div class="portfolio-item">
+											<a class="text-white" href="https://github.com/sharleneimperial/getfit-guru-frontend">
+											  <div class="card-image card-image-contain" style="background-image: url(https://media.giphy.com/media/7tX9JLioT8YdvDLOEb/giphy.gif)"></div>
+											  <div class="project-inner">
+												<h4>GetFit Guru App</h4>
+												<p>A web app in which you can browse exercise and create routines. Where you can track and chart your progress to reach your fitness goals.</p>
+											  </div>
+											  <div class="project-info">
+												<div class="project-text">
+												  <h4>github</h4>
+												</div>
+											  </div>
+											</a>
+										  </div>
+										  <div class="portfolio-item">
+											<a class="text-white" href="https://github.com/sharleneimperial/capstone_project">
+											  <div class="card-image card-image-contain" style="background-image: url(https://media.giphy.com/media/ewImoGC0nAMLUYcbR8/giphy.gif)"></div>
+											  <div class="project-inner">
+												<h4>Imperial Cuisine Ordering & Delivery System App</h4>
+												<p>A web app in which you can search through our menu and filter it down by category or keyword. Customers can order food online. They can also change their street delivery address and cancel their orders. This app also allows the restaurant business to accept and manage orders placed via website or mobile app.</p>
+											  </div>
+											  <div class="project-info">
+												<div class="project-text">
+												  <h4>github</h4>
+												</div>
+											  </div>
+											</a>
+										  </div>
 							</article>
 
 						<!-- About -->
